--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
   "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "expo run-android",
+    "ios": "expo run-ios",
     "web": "expo start --web",
-    "start": "react-native start",
+    "start": "expo start",
     "test": "jest"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-updates": "~0.3.3",
+    "@expo-google-fonts/montserrat": "^0.1.0",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/async-storage": "react-native-community/async-storage",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.0",
+    "@react-navigation/drawer": "^5.9.1",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
+    "axios": "^0.20.0",
+    "expo": "^38.0.2",
+    "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
+    "expo-updates": "~0.2.8",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.2",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.10.1",
+    "react-native": "0.62.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~2.9.0",
+    "react-native-switch-selector": "^2.0.6",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.7",
+    "react-navigation": "^4.4.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "babel-preset-expo": "~8.3.0",
-    "jest-expo": "~39.0.0",
-    "typescript": "~3.9.5"
+    "@types/styled-components": "^5.1.3",
+    "babel-preset-expo": "^8.3.0",
+    "jest-expo": "^39.0.0",
+    "typescript": "~3.9.2"
   },
   "jest": {
     "preset": "react-native"
